RESOLVED FIXED 255240
[Base system] Crash when accessing soft-linked Objective-C classes while decoding IPC
https://bugs.webkit.org/show_bug.cgi?id=255240
Summary [Base system] Crash when accessing soft-linked Objective-C classes while deco...
Wenson Hsieh
Reported 2023-04-10 12:14:53 PDT
Attachments
Wenson Hsieh
Comment 1 2023-04-10 12:22:55 PDT
EWS
Comment 2 2023-04-10 13:44:32 PDT
Committed 262783@main (353fc00c0bda): <https://commits.webkit.org/262783@main> Reviewed commits have been landed. Closing PR #12579 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.