[Base system] Crash when accessing soft-linked Objective-C classes while decoding IPC https://bugs.webkit.org/show_bug.cgi?id=255240 rdar://107838765

Reviewed by Aditya Keerthi.

Add relevant runtime framework availability checks for the following system frameworks:

- PassKitCore
- DataDetectorsCore
- DataDetectors
- VisionKitCore
- Reveal

...before attempting to soft link Objective-C objects from those respective frameworks.

* Source/WebKit/Shared/Cocoa/ArgumentCodersCocoa.mm:
(IPC::shouldEnableStrictMode):

Also remove an extraneous `ENABLE(IMAGE_ANALYSIS)` here; `ENABLE(IMAGE_ANALYSIS)` is true as long as
`HAVE(VK_IMAGE_ANALYSIS)` is true, so there's no need to check both.

Canonical link: https://commits.webkit.org/262783@main